--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+#---------------------------------- 0.38.1 -----------------------------------
+[fixed] If the first method that was called on the rom.session object was
+    either .refresh() or .refresh_all(), rom would raise an AttributeError.
+    Thanks to Github user https://github.com/peter-conalgo for the bug report.
 #---------------------------------- 0.38.0 -----------------------------------
 [fixed] In some cases, columns with keygens that didn't generate an index
     entry would not have its column data saved. Thanks to github user
