--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+#---------------------------------- 0.39.5 -----------------------------------
+[fixed] When using Model.query.select(...), you are no longer required to
+    include all 'required' columns as part of the select when decode=True.
+    Thanks to github user https://github.com/peter-conalgo for the bug report.
 #---------------------------------- 0.39.4 -----------------------------------
 [fixed] Fix for bug where patterns could match primary key values in prefix
     or suffix indexes. Thanks to github user https://github.com/peter-conalgo
