--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+#----------------------------------- 1.0.2 -----------------------------------
+[fix] thanks to bug report by github user https://github.com/Goury, fixed old
+    bug with rebuilding indexes via scan.
 #----------------------------------- 1.0.1 -----------------------------------
 [fix] thanks to bug report and instructions from github user
     https://github.com/mshalom-meta, I have fixed rom to be compatible with
