--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+#----------------------------------- 1.0.6 -----------------------------------
+[added] IndexOnly columns can now have unique indexes generated via keygen.
 #----------------------------------- 1.0.5 -----------------------------------
 Re-release for git tags
 #----------------------------------- 1.0.4 -----------------------------------
