--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+#----------------------------------- 1.0.7 -----------------------------------
+[fixed] searching by unique indexonly columns; previously would try to use the
+    useless "to_redis" on the column type, which returns none.
 #----------------------------------- 1.0.6 -----------------------------------
 [added] IndexOnly columns can now have unique indexes generated via keygen.
 #----------------------------------- 1.0.5 -----------------------------------
