--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+#----------------------------------- 1.1.0 -----------------------------------
+[added] UnsafeColumns(); used for direct access to Redis structures per entity,
+    which are deleted on entity deletion.
 #----------------------------------- 1.0.7 -----------------------------------
 [fixed] searching by unique indexonly columns; previously would try to use the
     useless "to_redis" on the column type, which returns none.
