--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+#----------------------------------- 1.1.1 -----------------------------------
+[added] IDENTITY_STRING and IDENTITY_STRING_CI keygens for 
+[fixed] exception edge case when saving / deleting index-only columns with a
+    unique constraint and no relevant data.
 #----------------------------------- 1.1.0 -----------------------------------
 [added] UnsafeColumns(); used for direct access to Redis structures per entity,
     which are deleted on entity deletion.
